mType/tests/testFiles/controlFlow/error/finalForLoopVariable.mt
// For loop variables cannot be final
for (final int i = 0; i < 5; i++) {
    print(i);
}

print("This should not be reached");